made it so that the area of when u click on either language or location is a lot smaller to avoid accidentally triggering it on mobile

--- a/css/profile.css
+++ b/css/profile.css
@@ -202,7 +202,11 @@ button:hover {
   }
   .dropdown-toggle {
     font-size: 0.9rem;
-    padding: 8px;
+    display: inline-block;
+    width: auto;
+    padding: 4px 8px;
+    margin: 0 auto;
+    border-radius: 5px;
   }
 
   .dropdown-toggle p {
